[package]
name = "rust_job_server"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["sqlite", "runtime-actix-native-tls", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = "0.20"
tokio-rustls = "0.23"
rustls-pemfile = "1.0"
uuid = { version = "1", features = ["v4"] }
actix-web = { version = "4", features = ["rustls"] }

